--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "gh-pages": "^6.2.0",
     "live-server": "^1.2.2",
     "prettier": "^3.3.3"
+  },
+  "dependencies": {
+    "openai": "^6.9.0"
   }
 }
