--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
   "name": "arjs-ar-chatbot",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "npx live-server apps/web --port=5173",
-    "lint": "eslint \"apps/web/**/*.{js,html}\"",
+    "server": "node server.js",
     "format": "prettier -w .",
-    "build": "echo \"(정적 빌드 없음)\"",
-    "pages:build": "rm -rf dist && mkdir dist && cp -r apps/web/* dist",
-    "pages:deploy": "gh-pages -d dist"
-  },
-  "devDependencies": {
-    "eslint": "^9.13.0",
-    "eslint-plugin-html": "^8.1.2",
-    "gh-pages": "^6.2.0",
-    "live-server": "^1.2.2",
-    "prettier": "^3.3.3"
+    "lint": "eslint \"apps/web/**/*.{js,html}\""
   },
   "dependencies": {
-    "openai": "^6.9.0"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "cors": "^2.8.5",
+    "openai": "^4.56.0"
+  },
+  "devDependencies": {
+    "live-server": "^1.2.2",
+    "prettier": "^3.3.3",
+    "eslint": "^9.13.0",
+    "eslint-plugin-html": "^8.1.2"
   }
 }
